syntax = "proto3";

package file.pb;

message FileQuery {
    string  fileId = 1;
}

message FileQueryResult {
    string  fileId = 1;
    bool    exists = 2;
}

message FileDownloadChunk {
    string  fileId = 1;
    int64   chunkIndex = 2;
    int64   chunkTotal = 3;
}

message FileChunkInfo {
    string  fileId = 1;
    string  chunkHash = 2;
    int64   chunkSize = 3;
}

// message File {
//     string  hashAlgo = 1;
//     string  hashValue = 2;
//     string  filePath = 3;
//     int64   fileSize = 4;
// }

message FileUploadRequest {
    string groupId = 1;
    string fileId = 2;
    int64  fileSize = 3;
}

message FileUploadReply {
    bool exists = 1;
}

message FileUploadResult {
    string fileId = 1;
    int64  fileSize = 2;
    string errMsg = 3;
}

message DownloadResourceRequest {
    string fileId = 1;
}

message DownloadResourceReply {
    string error = 1;
}

enum FileType {
    Other = 0;
    Text = 1;
    Image = 2;
    Voice = 3;
    Audio = 4;
    Video = 5;
  }

message FileInfo {
    string   fileId = 1;
    FileType fileType = 2;
    string   mimeType = 3;
    string   fileName = 4;
    int64    fileSize = 5;
    string   thumbnailId = 6;
    int32    width = 7;
    int32    height = 8;
    int32    duration = 9;
}